adicionando outras versoes dos modelos, e atualizando documentacao e readme

--- a/Documentacao.Rmd
+++ b/Documentacao.Rmd
@@ -39,6 +39,12 @@ Transformando os dados para a classe data.frame
 dados = as.data.frame(dados)
 ```
 
+Vamos colocar um seed para reproduzir os mesmos exemplos nas execuções.
+
+```{r}
+set.seed(105)
+```
+
 Checando valores missing
 
 ```{r}
@@ -114,7 +120,6 @@ Criando o primeiro modelo com o knn
 treino_labels = dados[index, 7]
 teste_labels = dados[-index, 7]
 
-set.seed(105)
 modelo_knn_v1 = knn(train = treino,
                     test = teste,
                     cl = treino_labels,
@@ -182,4 +187,52 @@ table(previsao_rf_v1, teste$STATUS)
 mean(previsao_rf_v1 == teste$STATUS)
 ```
 
-Conseguimos a melhor acurácia com o random forest, de 96%.
+Conseguimos a melhor acurácia com o random forest, de 95%.
+
+Vamos tentar mudar os hiperparâmetros do random forest para tentar conseguir um resultado melhor.
+
+```{r}
+modelo_rf_v2 = randomForest(STATUS ~ .,
+                            data = treino,
+                            ntree = 200,
+                            nodesize = 10)
+
+previsao_rf_v2 = predict(modelo_rf_v2, teste)
+
+table(previsao_rf_v2, teste$STATUS)
+mean(previsao_rf_v2 == teste$STATUS)
+```
+
+Acurácia de 95%, levemente inferior ao primeiro modelo.
+
+Vamos tentar mais uma modificação
+
+```{r}
+modelo_rf_v3 = randomForest(STATUS ~ .,
+                            data = treino,
+                            ntree = 200,
+                            nodesize = 5)
+
+previsao_rf_v3 = predict(modelo_rf_v3, teste)
+
+table(previsao_rf_v3, teste$STATUS)
+mean(previsao_rf_v3 == teste$STATUS)
+```
+
+Acurácia de 95%, levemente superior.
+
+Vamos tentar mais uma modificação.
+
+```{r}
+modelo_rf_v4 = randomForest(STATUS ~ .,
+                            data = treino,
+                            ntree = 200,
+                            nodesize = 1)
+
+previsao_rf_v4 = predict(modelo_rf_v4, teste)
+
+table(previsao_rf_v4, teste$STATUS)
+mean(previsao_rf_v4 == teste$STATUS)
+```
+
+Acurácia de 96%, conseguimos a melhor performance com essa versão do modelo random forest.
